nivasa-macros/tests/trybuild/config_schema_unknown_key.rs
use nivasa_macros::ConfigSchema;

#[derive(ConfigSchema)]
struct BadConfig {
    #[schema(foo = "bar")]
    host: String,
}

fn main() {}
